fixed image responsiveness overflow

--- a/src/Museum.css
+++ b/src/Museum.css
@@ -12,6 +12,7 @@
 .museum__image {
   box-shadow: 5px 5px 5px rgba(163, 162, 162, 0.92);
 }
+
 .museum__info {
   display: flex;
   flex-direction: column;
@@ -20,6 +21,11 @@
   justify-content: flex-start;
   text-align: left;
   font-size: 3vh;
+  background-color: #eee2dc;
+  padding: 25px;
+  border-radius: 15px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.79);
+  max-width: 400px;
 }
 .museum__name {
   text-align: center;
@@ -44,6 +50,11 @@
 }
 
 @media only screen and (max-width: 1100px) {
+  .museum__image {
+    display: none;
+  }
+}
+@media only screen and (max-height: 809px) {
   .museum__image {
     display: none;
   }
