--- a/src/Restaurant.css
+++ b/src/Restaurant.css
@@ -25,12 +25,12 @@
   text-align: center;
   font-size: 5vh;
   text-decoration: underline;
-  background-color: #123c69;
+  /* background-color: #123c69; */
   padding: 25px 25px 0 25px;
 }
 .restaurant__button {
   background-color: #123c69;
-  box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.79);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.79);
   padding: 10px;
   border-radius: 5px;
   text-align: center;
@@ -41,9 +41,10 @@
 }
 
 .restaurant__info {
-  background-color: white;
+  background-color: #eee2dc;
   padding: 25px;
   border-radius: 15px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.79);
 }
 .restaurant__info a {
   color: white;
@@ -55,6 +56,11 @@
 }
 
 @media only screen and (max-width: 1100px) {
+  .restaurant__image {
+    display: none;
+  }
+}
+@media only screen and (max-height: 809px) {
   .restaurant__image {
     display: none;
   }
